--- a/app/src/main/res/layout/introduction.xml
+++ b/app/src/main/res/layout/introduction.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:onClick="startgame"
+        android:onClick="startGame"
         android:text="Game page"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
