--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_StartGame"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
@@ -31,7 +31,7 @@
         tools:onClick="startGame" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button_Help"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
@@ -40,11 +40,11 @@
         android:onClick="introduction"
         android:text="Help"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button_StartGame"
         tools:onClick="introduction" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/button_Leaderboarder"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
@@ -52,5 +52,5 @@
         android:background="#92AC77"
         android:text="LEADERBOARD"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/button_Help" />
 </androidx.constraintlayout.widget.ConstraintLayout>
