--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -7,11 +7,11 @@
     android:background="#2A545C60">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/page_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="145dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="96dp"
         android:text="2048!"
         android:textSize="48sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:onClick="startGame"
         android:text="START GAME"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/page_num"
         tools:onClick="startGame" />
 
     <Button
