--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -155,11 +155,11 @@
     </LinearLayout>
 
 
-    <com.example.freedom.voicerecognition.GameView
+    <com.example.freedom.game2048.GameView
         android:id="@+id/gameView"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></com.example.freedom.voicerecognition.GameView>
+        android:layout_weight="1"></com.example.freedom.game2048.GameView>
 
 
 </LinearLayout>
